# icr2tools

./: .gitignore  MANIFEST.in  README.md  setup.cfg
icr2_3d_catalog_viewer/: icr2_3d_catalog_parser.py  icr2_3d_catalog_viewer.py
icr2_core/: ARCHITECTURE.md  car_state_decoder.py  icr2_memory.py  memory_io.py  model.py  reader.py  sg_elevation.py  track_detector.py
icr2_core.egg-info/: PKG-INFO  SOURCES.txt
icr2timing/: .gitignore  ARCHITECTURE.md  build.bat  car_data_editor.py  convert_icon.py  main.py  profiles.ini  settings.ini
icr2viewer/: __init__.py  geometry.py  main.py  surface_view.py  track_catalog.py  window.py
sg_viewer/: ARCHITECTURE.md  __init__.py  __main__.py  app.py  architecture.md  background_image_dialog.py  bg_calibrator_minimal.py  build.bat  centerline_utils.py  curve_solver.py  editor_state.py  elevation_profile.py  heading_table_dialog.py  history.py  main.py  preview_background.py  preview_editor.py  preview_interaction.py  preview_interactions_create.py  preview_loader.py  preview_loader_service.py  preview_painter.py  preview_rendering.py  preview_state.py  preview_state_controller.py  preview_transform.py  preview_widget.py  rendering_service.py  replacecolors.py  section_properties.py  section_table_dialog.py  selection.py  sg_create_marquee_messages.py  sg_document_fsects.py  sg_geometry.py  sg_rendering.py  skids2.py  version.py  viewer_controller.py
sunny_optimizer/: __init__.py  chop_horizon.py  main.py  model.py  palette.py  quantizer.py
tests/: test_bg_calibrator_send_payload.py  test_bg_calibrator_similarity_fit.py  (+117 more)
(+397 files in other folders)
