[metadata]
name = icr2_core
version = 0.5.0
author = SK Chow
description = Shared core library for IndyCar Racing II modding tools (memory, config, TRK, MIP, DAT)
license = MIT

[options]
packages = find:
python_requires = >=3.9
include_package_data = True

[options.entry_points]
console_scripts =
    track-viewer = track_viewer.controllers.main:main
    sg-viewer = sg_viewer.main:main
